[package]
name = "happ-client-call-tutorial"
version = "0.1.0"
authors = ["Connor Turland <connor@sprillow.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
holochain_conductor_client = { git = "https://github.com/holochain/holochain-client-rust", rev = "59fc988b50f0097056aa02f11cd1b89a73f1c306" }
holochain_conductor_api = "0.0.19"
hdk = "0.0.116"
paste = "*"
serde = "*"
tokio = "1.8.1"
